# grobner-basis

./: .gitmodules  Algorithm.h  CMakeLists.txt  Monomial.h  MonomialOrder.h  Polynomial.h  PolynomialOrder.h  PolynomialSet.h  PolynomialVector.h  README.md  README.txt  ResidueModulo.h  answers.txt  main.cpp  tests.cpp  tests.h  wFile.h
